Converted successfully from Runtime.exec() to ProcessBuilder